--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           </ul>
         </nav>
         <div class="extras">
+          <i class="bi bi-list"></i>
           <i class="bi bi-bag"></i>
           <i class="bi bi-search"></i>
           <a href="#contacto" class="btn">Contáctanos</a>
