--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Índice de Proyectos</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>aaaaaaaaaaaaaaaaaaa</p>
+    <div class="container">
+        <h1>Índice de Proyectos</h1>
+        <div class="links">
+            <a href="https://mrcobi.github.io/Dise-o/Proyecto/index.html" target="_blank">Versión Actual</a>
+            <a href="https://mrcobi.github.io/Dise-o/Proyecto_AAA/index.html" target="_blank">Versión Final</a>
+        </div>
+        <footer>
+            © 2025 Alejandro Moya Simarro
+        </footer>
+    </div>
 </body>
 </html>
