--- a/Proyecto_AAA/index.html
+++ b/Proyecto_AAA/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a href="#main-content" class="skip-link">Saltar al contenido</a>
-
+    <div role="banner">
+      <a href="#main-content" class="skip-link">Saltar al contenido</a>
+    </div>
     <header>
       <section class="top-bar">
         <nav class="contact-info" aria-label="Contact information">
