--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="https://mrcobi.github.io/Dise-o/Proyecto_AAA/index.html" target="_blank">Versión Final</a>
         </div>
         <footer>
-            © 2025 Alejandro Moya Simarro
+           Alejandro Moya Simarro
         </footer>
     </div>
 </body>
