--- a/Proyecto_AAA/index.html
+++ b/Proyecto_AAA/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Somos una agencia creativa que transforma ideas en experiencias digitales excepcionales. Descubre nuestros servicios de branding, diseño y tecnología.">
     <title>Proyecto_AAA</title>
     <link
       rel="stylesheet"
@@ -18,55 +19,15 @@
       <section class="top-bar">
         <nav class="contact-info" aria-label="Contact information">
           <p>📞 +1 212 946 2700</p>
-          <a href="javascript:void(0)">Help Center</a>
-          <a href="javascript:void(0)">Docs</a>
+          <a href="#help-center">Help Center</a>
+          <a href="#docs">Docs</a>
         </nav>
         <nav class="social-icons" aria-label="Social media links">
-          <i class="bi bi-facebook" aria-label="Facebook"></i>
-          <i class="bi bi-twitter" aria-label="Twitter"></i>
-          <i class="bi bi-instagram" aria-label="Instagram"></i>
-          <i class="bi bi-globe" aria-label="Website"></i>
+          <a href="#facebook" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+          <a href="#twitter" aria-label="Twitter"><i class="bi bi-twitter"></i></a>
+          <a href="#instagram" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#website" aria-label="Website"><i class="bi bi-globe"></i></a>
         </nav>
-      </section>
-      <div class="main-header">
-        <div class="logo">
-          <img src="image/logo.png" alt="Logotipo de la empresa" />
-        </div>
-        <nav aria-label="Main navigation">
-          <ul>
-            <li><a href="javascript:void(0)">Home</a></li>
-            <li><a href="javascript:void(0)">About</a></li>
-            <li><a href="javascript:void(0)">Services</a></li>
-            <li><a href="javascript:void(0)">Pricing</a></li>
-            <li><a href="javascript:void(0)">Products</a></li>
-            <li><a href="javascript:void(0)">Resources</a></li>
-          </ul>
-        </nav>
-        <div class="extras">
-          <i class="bi bi-list" aria-label="Menu"></i>
-          <i class="bi bi-bag" aria-label="Cart"></i>
-          <i class="bi bi-search" aria-label="Search"></i>
-          <a href="javascript:void(0)" class="btn">Contáctanos</a>
-        </div>
-      </div>
-    </header>
-    <main id="main-content">
-      <section id="hero">
-        <article class="hero-content" aria-label="hero-title">
-          <h1>Driving meaningful change through technology & design</h1>
-          <p>
-            Crafting delightful experiences through meticulous attention to
-            detail. We help our clients reach their full potential through
-            serving as the management team.
-          </p>
-          <div class="hero-buttons">
-            <a href="javascript:void(0)" class="btn">Latest Projects</a>
-            <a href="javascript:void(0)" class="btn btn-green">Watch Reel</a>
-          </div>
-        </article>
-        <div class="hero-image">
-          <img src="image/chica.png" alt="Persona con smartphone" />
-        </div>
       </section>
 
       <section id="services" class="services-section">
