--- a/Proyecto_AAA/index.html
+++ b/Proyecto_AAA/index.html
@@ -136,7 +136,7 @@
               create brand experiences that feel familiar yet new. They have to
               resonate.
             </p>
-            <a href="javascript:void(0)" class="btn">Our Work</a>
+            <a href="#our-work" class="btn">Our Work</a>
           </div>
           <div class="stats-section">
             <div class="stat">
@@ -246,7 +246,7 @@
             </div>
           </div>
         </div>
-        <a href="javascript:void(0)" class="btn">View All Posts</a>
+        <a href="#all-posts" class="btn">View All Posts</a>
       </section>
     </main>
 
@@ -259,44 +259,44 @@
             experiences.
           </p>
           <div class="footer-social">
-            <a href="javascript:void(0)"><i class="bi bi-twitter" aria-label="Twitter"></i></a>
-            <a href="javascript:void(0)"><i class="bi bi-facebook" aria-label="Facebook"></i></a>
-            <a href="javascript:void(0)"><i class="bi bi-instagram" aria-label="Instagram"></i></a>
+            <a href="#Twitter"><i class="bi bi-twitter" aria-label="Twitter"></i></a>
+            <a href="#Facebook"><i class="bi bi-facebook" aria-label="Facebook"></i></a>
+            <a href="#Instagram"><i class="bi bi-instagram" aria-label="Instagram"></i></a>
           </div>
         </div>
         <div class="footer-links">
           <div class="footer-column">
             <h3>About</h3>
             <ul>
-              <li><a href="javascript:void(0)">Services</a></li>
-              <li><a href="javascript:void(0)">Portfolio</a></li>
-              <li><a href="javascript:void(0)">About</a></li>
-              <li><a href="javascript:void(0)">Blog</a></li>
+              <li><a href="#Services">Services</a></li>
+              <li><a href="#Portfolio">Portfolio</a></li>
+              <li><a href="#About">About</a></li>
+              <li><a href="#Blog">Blog</a></li>
             </ul>
           </div>
           <div class="footer-column">
             <h3>Products</h3>
             <ul>
-              <li><a href="javascript:void(0)">Platform</a></li>
-              <li><a href="javascript:void(0)">Customers</a></li>
-              <li><a href="javascript:void(0)">Products</a></li>
-              <li><a href="javascript:void(0)">Pricing</a></li>
+              <li><a href="#Platform">Platform</a></li>
+              <li><a href="#Customers">Customers</a></li>
+              <li><a href="#Products">Products</a></li>
+              <li><a href="#Pricing">Pricing</a></li>
             </ul>
           </div>
           <div class="footer-column">
             <h3>Resources</h3>
             <ul>
-              <li><a href="javascript:void(0)">Training</a></li>
-              <li><a href="javascript:void(0)">Marketplace</a></li>
-              <li><a href="javascript:void(0)">Experts</a></li>
-              <li><a href="javascript:void(0)">Guides</a></li>
+              <li><a href="#Training">Training</a></li>
+              <li><a href="#Marketplace">Marketplace</a></li>
+              <li><a href="#Experts">Experts</a></li>
+              <li><a href="#Guides">Guides</a></li>
             </ul>
           </div>
           <div class="footer-column">
             <h3>Offices</h3>
             <ul>
               <li>
-                <a href="javascript:void(0)"
+                <a href="#Location"
                   >New York, 112 W 34th St, Manhattan, USA</a
                 >
               </li>
