--- a/Proyecto_AAA/index.html
+++ b/Proyecto_AAA/index.html
@@ -85,16 +85,16 @@
       <section id="sponsors-section">
         <div class="sponsors-grid">
           <figure>
-            <img src="image/sponsor/sponsor1.png" alt="sponsor1" />
+            <img src="image/sponsor/sponsor1.WebP" alt="sponsor1" />
           </figure>
           <figure>
-            <img src="image/sponsor/sponsor2.png" alt="sponsor2" />
+            <img src="image/sponsor/sponsor2.WebP" alt="sponsor2" />
           </figure>
           <figure>
-            <img src="image/sponsor/sponsor3.png" alt="sponsor3" />
+            <img src="image/sponsor/sponsor3.WebP" alt="sponsor3" />
           </figure>
           <figure>
-            <img src="image/sponsor/sponsor4.png" alt="sponsor4" />
+            <img src="image/sponsor/sponsor4.WebP" alt="sponsor4" />
           </figure>
         </div>
       </section>
@@ -119,7 +119,7 @@
           </div>
           <div class="image-content">
             <img
-              src="image/personavr.png"
+              src="image/personavr.WebP"
               alt="Persona con casco de realidad virtual"
             />
           </div>
@@ -165,24 +165,24 @@
         <div class="projects">
           <article class="project" aria-label="project1">
             <img
-              src="image/dbrand/image1.png"
+              src="image/dbrand/image1.WebP"
               alt="SEO Project Management Tool"
             />
             <h1>Marketing</h1>
             <h2>Marketing: SEO Project Management Tool</h2>
           </article>
           <article class="project" aria-label="project2">
-            <img src="image/dbrand/image2.png" alt="Desktop Sign Up Flow" />
+            <img src="image/dbrand/image2.WebP" alt="Desktop Sign Up Flow" />
             <h1>UI Design</h1>
             <h2>UI Design: Desktop Sign Up Flow</h2>
           </article>
           <article class="project" aria-label="project3">
-            <img src="image/dbrand/image3.png" alt="Developers Working Hard" />
+            <img src="image/dbrand/image3.WebP" alt="Developers Working Hard" />
             <h1>UI Design</h1>
             <h2>UI Design: Developers Working Hard</h2>
           </article>
           <article class="project" aria-label="project4">
-            <img src="image/dbrand/image4.png" alt="CoinView Crypto App" />
+            <img src="image/dbrand/image4.WebP" alt="CoinView Crypto App" />
             <h1>Application</h1>
             <h2>Application: CoinView Crypto App</h2>
           </article>
@@ -203,7 +203,7 @@
             </p>
             <div class="author-info">
               <img
-                src="image/insights/image1.png"
+                src="image/insights/image1.WebP"
                 alt="Author Image"
                 class="author-img"
               />
@@ -214,7 +214,7 @@
             <h2>The five commandments of SEO and JavaScript for beginners</h2>
             <div class="author-info">
               <img
-                src="image/insights/image2.png"
+                src="image/insights/image2.WebP"
                 alt="Author Image"
                 class="author-img"
               />
@@ -227,7 +227,7 @@
             </h2>
             <div class="author-info">
               <img
-                src="image/insights/image3.png"
+                src="image/insights/image3.WebP"
                 alt="Author Image"
                 class="author-img"
               />
@@ -238,7 +238,7 @@
             <h2>Mobile app UI design tips and trends to follow in 2020</h2>
             <div class="author-info">
               <img
-                src="image/insights/image4.png"
+                src="image/insights/image4.WebP"
                 alt="Author Image"
                 class="author-img"
               />
@@ -253,7 +253,7 @@
     <footer>
       <div class="footer-container">
         <div class="footer-logo">
-          <img src="image/logo.png" alt="Logo" />
+          <img src="image/logo.WebP" alt="Logo" />
           <p>
             We are a creative studio founded in NYC. We build brands & digital
             experiences.
