--- a/Proyecto_AAA/index.html
+++ b/Proyecto_AAA/index.html
@@ -29,6 +29,86 @@
           <a href="#website" aria-label="Website"><i class="bi bi-globe"></i></a>
         </nav>
       </section>
+      <div class="main-header">
+        <div class="logo">
+          <img src="image/logo.png" alt="Logotipo de la empresa" />
+        </div>
+        <nav aria-label="Main navigation">
+          <ul>
+            <li><a href="javascript:void(0)">Home</a></li>
+            <li><a href="javascript:void(0)">About</a></li>
+            <li><a href="javascript:void(0)">Services</a></li>
+            <li><a href="javascript:void(0)">Pricing</a></li>
+            <li><a href="javascript:void(0)">Products</a></li>
+            <li><a href="javascript:void(0)">Resources</a></li>
+          </ul>
+        </nav>
+        <div class="extras">
+          <i class="bi bi-list" aria-label="Menu"></i>
+          <i class="bi bi-bag" aria-label="Cart"></i>
+          <i class="bi bi-search" aria-label="Search"></i>
+          <a href="javascript:void(0)" class="btn">Contáctanos</a>
+        </div>
+      </div>
+    </header>
+   
+    <main id="main-content">
+      <section id="hero">
+        <article class="hero-content" aria-label="hero-title">
+          <h1>Driving meaningful change through technology & design</h1>
+          <p>
+            Crafting delightful experiences through meticulous attention to
+            detail. We help our clients reach their full potential through
+            serving as the management team.
+          </p>
+          <div class="hero-buttons">
+            <a href="javascript:void(0)" class="btn">Latest Projects</a>
+            <a href="javascript:void(0)" class="btn btn-green">Watch Reel</a>
+          </div>
+        </article>
+        <div class="hero-image">
+          <img src="image/chica. <div class="main-header">
+        <div class="logo">
+          <img src="image/logo.png" alt="Logotipo de la empresa" />
+        </div>
+        <nav aria-label="Main navigation">
+          <ul>
+            <li><a href="javascript:void(0)">Home</a></li>
+            <li><a href="javascript:void(0)">About</a></li>
+            <li><a href="javascript:void(0)">Services</a></li>
+            <li><a href="javascript:void(0)">Pricing</a></li>
+            <li><a href="javascript:void(0)">Products</a></li>
+            <li><a href="javascript:void(0)">Resources</a></li>
+          </ul>
+        </nav>
+        <div class="extras">
+          <i class="bi bi-list" aria-label="Menu"></i>
+          <i class="bi bi-bag" aria-label="Cart"></i>
+          <i class="bi bi-search" aria-label="Search"></i>
+          <a href="#contact" class="btn">Contáctanos</a>
+        </div>
+      </div>
+    </header>
+    <main id="main-content">
+      <section id="hero">
+        <article class="hero-content" aria-label="hero-title">
+          <h1>Driving meaningful change through technology & design</h1>
+          <p>
+            Crafting delightful experiences through meticulous attention to
+            detail. We help our clients reach their full potential through
+            serving as the management team.
+          </p>
+          <div class="hero-buttons">
+            <a href="#latest-projects" class="btn">Latest Projects</a>
+            <a href="#watch-reel" class="btn btn-green">Watch Reel</a>
+          </div>
+        </article>
+        <div class="hero-image">
+          <img src="image/chica.WebP" alt="Persona con smartphone" />
+        </div>
+      </section>" alt="Persona con smartphone" />
+        </div>
+      </section>
 
       <section id="services" class="services-section">
         <div class="services-grid">
