--- a/Proyecto_AAA/index.html
+++ b/Proyecto_AAA/index.html
@@ -67,7 +67,7 @@
           </div>
         </article>
         <div class="hero-image">
-          <img src="image/chica. <div class="main-header">
+          <img src="image/chica" alt="Persona con smartphone" class="main-header">
         <div class="logo">
           <img src="image/logo.png" alt="Logotipo de la empresa" />
         </div>
@@ -85,7 +85,7 @@
           <i class="bi bi-list" aria-label="Menu"></i>
           <i class="bi bi-bag" aria-label="Cart"></i>
           <i class="bi bi-search" aria-label="Search"></i>
-          <a href="#contact" class="btn">Contáctanos</a>
+          <a href="#" class="btn">Contáctanos</a>
         </div>
       </div>
     </header>
