--- a/Proyecto_AAA/index.html
+++ b/Proyecto_AAA/index.html
@@ -32,7 +32,7 @@
 
       <div class="main-header">
         <div class="logo">
-          <img src="image/logo.WebP" alt="Logotipo de la empresa" />
+          <img srcset="image/logo.WebP" alt="Logotipo de la empresa" />
         </div>
         <nav aria-label="Main navigation">
           <ul>
@@ -67,7 +67,7 @@
           </div>
         </article>
         <div class="hero-image">
-          <img src="image/chica.WebP" alt="Persona con smartphone" />
+          <img srcset="image/chica.WebP" alt="Persona con smartphone" />
         </div>
       </section>
 
@@ -126,16 +126,16 @@
       <section id="sponsors-section">
         <div class="sponsors-grid">
           <figure>
-            <img src="image/sponsor/sponsor1.WebP" alt="sponsor1" />
+            <img srcset="image/sponsor/sponsor1.WebP" alt="sponsor1" />
           </figure>
           <figure>
-            <img src="image/sponsor/sponsor2.WebP" alt="sponsor2" />
+            <img srcset="image/sponsor/sponsor2.WebP" alt="sponsor2" />
           </figure>
           <figure>
-            <img src="image/sponsor/sponsor3.WebP" alt="sponsor3" />
+            <img srcset="image/sponsor/sponsor3.WebP" alt="sponsor3" />
           </figure>
           <figure>
-            <img src="image/sponsor/sponsor4.WebP" alt="sponsor4" />
+            <img srcset="image/sponsor/sponsor4.WebP" alt="sponsor4" />
           </figure>
         </div>
       </section>
@@ -160,7 +160,7 @@
           </div>
           <div class="image-content">
             <img
-              src="image/personavr.WebP"
+              srcset="image/personavr.WebP"
               alt="Persona con casco de realidad virtual"
             />
           </div>
@@ -206,24 +206,24 @@
         <div class="projects">
           <article class="project" aria-label="project1">
             <img
-              src="image/dbrand/image1.WebP"
+              srcset="image/dbrand/image1.WebP"
               alt="SEO Project Management Tool"
             />
             <h1>Marketing</h1>
             <h2>Marketing: SEO Project Management Tool</h2>
           </article>
           <article class="project" aria-label="project2">
-            <img src="image/dbrand/image2.WebP" alt="Desktop Sign Up Flow" />
+            <img srcset="image/dbrand/image2.WebP" alt="Desktop Sign Up Flow" />
             <h1>UI Design</h1>
             <h2>UI Design: Desktop Sign Up Flow</h2>
           </article>
           <article class="project" aria-label="project3">
-            <img src="image/dbrand/image3.WebP" alt="Developers Working Hard" />
+            <img srcset="image/dbrand/image3.WebP" alt="Developers Working Hard" />
             <h1>UI Design</h1>
             <h2>UI Design: Developers Working Hard</h2>
           </article>
           <article class="project" aria-label="project4">
-            <img src="image/dbrand/image4.WebP" alt="CoinView Crypto App" />
+            <img srcset="image/dbrand/image4.WebP" alt="CoinView Crypto App" />
             <h1>Application</h1>
             <h2>Application: CoinView Crypto App</h2>
           </article>
@@ -244,7 +244,7 @@
             </p>
             <div class="author-info">
               <img
-                src="image/insights/image1.WebP"
+                srcset="image/insights/image1.WebP"
                 alt="Author Image"
                 class="author-img"
               />
@@ -255,7 +255,7 @@
             <h2>The five commandments of SEO and JavaScript for beginners</h2>
             <div class="author-info">
               <img
-                src="image/insights/image2.WebP"
+                srcset="image/insights/image2.WebP"
                 alt="Author Image"
                 class="author-img"
               />
@@ -268,7 +268,7 @@
             </h2>
             <div class="author-info">
               <img
-                src="image/insights/image3.WebP"
+                srcset="image/insights/image3.WebP"
                 alt="Author Image"
                 class="author-img"
               />
@@ -279,7 +279,7 @@
             <h2>Mobile app UI design tips and trends to follow in 2020</h2>
             <div class="author-info">
               <img
-                src="image/insights/image4.WebP"
+                srcset="image/insights/image4.WebP"
                 alt="Author Image"
                 class="author-img"
               />
@@ -294,7 +294,7 @@
     <footer>
       <div class="footer-container">
         <div class="footer-logo">
-          <img src="image/logo.WebP" alt="Logo" />
+          <img srcset="image/logo.WebP" alt="Logo" />
           <p>
             We are a creative studio founded in NYC. We build brands & digital
             experiences.
