--- a/Proyecto_AAA/index.html
+++ b/Proyecto_AAA/index.html
@@ -67,7 +67,8 @@
           </div>
         </article>
         <div class="hero-image">
-          <img srcset="image/chica.WebP" alt="Persona con smartphone" />
+          <link rel="preload" as="image" href="image/chica.WebP" type="image/webp">
+
         </div>
       </section>
 
