--- a/Proyecto_AAA/index.html
+++ b/Proyecto_AAA/index.html
@@ -67,8 +67,7 @@
           </div>
         </article>
         <div class="hero-image">
-          <link rel="preload" as="image" href="image/chica.WebP" type="image/webp">
-
+          <img srcset="image/chica.WebP" alt="Persona con smartphone" />
         </div>
       </section>
 
