--- a/Proyecto_Usabilidad/index.html
+++ b/Proyecto_Usabilidad/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Somos una agencia creativa que transforma ideas en experiencias digitales excepcionales. Descubre nuestros servicios de branding, diseño y tecnología.">
-    <title>Proyecto_AAA</title>
+    <title>Proyecto_Usabilidad</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
