--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -14,7 +14,7 @@
     <header>
       <section class="top-bar">
         <nav class="contact-info">
-          <p>📞 +1 212 946 2700</p>
+          <p><i class="bi bi-telephone-fill"></i> +1 212 946 2700</p>
           <a href="#help-center">Help Center</a>
           <a href="#docs">Docs</a>
         </nav>
